package name change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FileSaver.js",
+  "name": "filesaver",
   "version": "1.0.0",
   "description": "FileSaver.js ============",
   "main": "FileSaver.js",
